---------------------------------------------------------------------------
Version 5.3.1  [DEVEL] (rgerhards), 2009-10-05
- added $AbortOnUncleanConfig directive - permits to prevent startup when
  there are problems with the configuration file. See it's doc for
  details.
- included some important fixes from v4-stable:
  * bugfix: invalid handling of zero-sized messages
  * bugfix: zero-sized UDP messages are no longer processed
  * bugfix: random data could be appended to message
  * bugfix: reverse lookup reduction logic in imudp do DNS queries too often
- bugfixes imported from 4.5.4:
  * bugfix: potential segfault in stream writer on destruction
  * bugfix: potential race in object loader (obj.c) during use/release
  * bugfixes: potential problems in out file zip writer
---------------------------------------------------------------------------
Version 5.3.0  [DEVEL] (rgerhards), 2009-09-14
- begun to add simple GUI programs to gain insight into running rsyslogd
  instances and help setup and troubleshooting (active via the
  --enable-gui ./configure switch)
- changed imudp to utilize epoll(), where available. This shall provide
  slightly better performance (just slightly because we called select()
  rather infrequently on a busy system)
---------------------------------------------------------------------------
Version 5.1.6  [v5-beta] (rgerhards), 2009-09-??
- feature imports from v4.5.6
- bugfix: potential race condition when queue worker threads were
  terminated
- bugfix: solved potential (temporary) stall of messages when the queue was
  almost empty and few new data added (caused testbench to sometimes hang!)
- fixed some race condition in testbench
- added more elaborate diagnostics to parts of the testbench
- bugfixes imported from 4.5.4:
  * bugfix: potential segfault in stream writer on destruction
  * bugfix: potential race in object loader (obj.c) during use/release
  * bugfixes: potential problems in out file zip writer