@@ -6,7 +6,7 @@
  *
  * File begun on 2007-12-20 by RGerhards (extracted from syslogd.c)
  *
- * Copyright 2007 Rainer Gerhards and Adiscon GmbH.
+ * Copyright 2007-2009 Rainer Gerhards and Adiscon GmbH.
  *
  * This file is part of rsyslog.
  *
@@ -70,6 +70,7 @@ DEFobjCurrIf(errmsg)
 DEFobjCurrIf(glbl)
 DEFobjCurrIf(prop)
 
+static prop_t *pLocalHostIP = NULL;	/* there is only one global IP for all internally-generated messages */
 static prop_t *pInputName = NULL;	/* our inputName currently is always "imudp", and this will hold it */
 static int startIndexUxLocalSockets; /* process funix from that index on (used to 
  				   * suppress local logging. rgerhards 2005-08-01
@@ -79,7 +80,7 @@ static int funixParseHost[MAXFUNIX] = { 0, }; /* should parser parse host name? 
 static int funixFlags[MAXFUNIX] = { IGNDATE, }; /* should parser parse host name?  read-only after startup */
 static int funixCreateSockPath[MAXFUNIX] = { 0, }; /* auto-creation of socket directory? */
 static uchar *funixn[MAXFUNIX] = { (uchar*) _PATH_LOG }; /* read-only after startup */
-static uchar *funixHName[MAXFUNIX] = { NULL, }; /* host-name override - if set, use this instead of actual name */
+static prop_t *funixHName[MAXFUNIX] = { NULL, }; /* host-name override - if set, use this instead of actual name */
 static int funixFlowCtl[MAXFUNIX] = { eFLOWCTL_NO_DELAY, }; /* flow control settings for this socket */
 static int funix[MAXFUNIX] = { -1, }; /* read-only after startup */
 static int nfunix = 1; /* number of Unix sockets open / read-only after startup */
@@ -122,29 +123,40 @@ static rsRetVal setSystemLogFlowControl(void __attribute__((unused)) *pVal, int 
  * rgerhards, 2007-12-20
  * added capability to specify hostname for socket -- rgerhards, 2008-08-01
  */
-static rsRetVal addLstnSocketName(void __attribute__((unused)) *pVal, uchar *pNewVal)
+static rsRetVal
+addLstnSocketName(void __attribute__((unused)) *pVal, uchar *pNewVal)
 {
+	DEFiRet;
+
 	if(nfunix < MAXFUNIX) {
 		if(*pNewVal == ':') {
 			funixParseHost[nfunix] = 1;
-		}
-		else {
+		} else {
 			funixParseHost[nfunix] = 0;
 		}
-		funixHName[nfunix] = pLogHostName;
-		pLogHostName = NULL; /* re-init for next, not freed because funixHName[] now owns it */
+		CHKiRet(prop.Construct(&(funixHName[nfunix])));
+		if(pLogHostName == NULL) {
+			CHKiRet(prop.SetString(funixHName[nfunix], glbl.GetLocalHostName(), ustrlen(glbl.GetLocalHostName())));
+		} else {
+			CHKiRet(prop.SetString(funixHName[nfunix], pLogHostName, ustrlen(pLogHostName)));
+			/* reset hostname for next socket */
+			free(pLogHostName);
+			pLogHostName = NULL;
+		}
+		CHKiRet(prop.ConstructFinalize(funixHName[nfunix]));
 		funixFlowCtl[nfunix] = bUseFlowCtl ? eFLOWCTL_LIGHT_DELAY : eFLOWCTL_NO_DELAY;
 		funixFlags[nfunix] = bIgnoreTimestamp ? IGNDATE : NOFLAG;
 		funixCreateSockPath[nfunix] = bCreateSockPath;
 		funixn[nfunix++] = pNewVal;
-	}
-	else {
+	} else {
 		errmsg.LogError(0, NO_ERRCODE, "Out of unix socket name descriptors, ignoring %s\n",
 			 pNewVal);
 	}
 
-	return RS_RET_OK;
+finalize_it:
+	RETiRet;
 }
+
 
 /* free the funixn[] socket names - needed as cleanup on several places
  * note that nfunix is NOT reset! funixn[0] is never freed, as it comes from
@@ -160,8 +172,7 @@ static rsRetVal discardFunixn(void)
 			funixn[i] = NULL;
 		}
 		if(funixHName[i] != NULL) {
-			free(funixHName[i]);
-			funixHName[i] = NULL;
+			prop.Destruct(&(funixHName[i]));
 		}
 	}
 	
@@ -194,6 +205,37 @@ static int create_unix_socket(const char *path, int bCreatePath)
 		return -1;
 	}
 	return fd;
+}
+
+
+/* submit received message to the queue engine
+ */
+static inline rsRetVal
+SubmitMsg(uchar *pRcv, int lenRcv, int iSock)
+{
+	msg_t *pMsg;
+	DEFiRet;
+
+	/* we now create our own message object and submit it to the queue */
+	CHKiRet(msgConstruct(&pMsg));
+	MsgSetRawMsg(pMsg, (char*)pRcv, lenRcv);
+	MsgSetInputName(pMsg, pInputName);
+	MsgSetFlowControlType(pMsg, funixFlowCtl[iSock]);
+
+	if(funixParseHost[iSock]) {
+		pMsg->msgFlags  = funixFlags[iSock] | NEEDS_PARSING | PARSE_HOSTNAME;
+		pMsg->bParseHOSTNAME = 1;
+	} else {
+		pMsg->msgFlags  = funixFlags[iSock] | NEEDS_PARSING;
+		pMsg->bParseHOSTNAME = 0;
+	}
+
+	MsgSetRcvFrom(pMsg, funixHName[iSock]);
+	CHKiRet(MsgSetRcvFromIP(pMsg, pLocalHostIP));
+	CHKiRet(submitMsg(pMsg));
+
+finalize_it:
+	RETiRet;
 }
 
 
@@ -231,10 +273,7 @@ static rsRetVal readSocket(int fd, int iSock)
 	iRcvd = recv(fd, pRcv, iMaxLine, 0);
 	dbgprintf("Message from UNIX socket: #%d\n", fd);
 	if (iRcvd > 0) {
-		parseAndSubmitMessage(funixHName[iSock] == NULL ? glbl.GetLocalHostName() : funixHName[iSock],
-				      (uchar*)"127.0.0.1", pRcv,
-			 	      iRcvd, funixParseHost[iSock] ? (funixFlags[iSock] | PARSE_HOSTNAME) : funixFlags[iSock],
-				      funixFlowCtl[iSock], pInputName, NULL, 0);
+		CHKiRet(SubmitMsg(pRcv, iRcvd, iSock));
 	} else if (iRcvd < 0 && errno != EINTR) {
 		char errStr[1024];
 		rs_strerror_r(errno, errStr, sizeof(errStr));
@@ -412,6 +451,15 @@ CODEmodInit_QueryRegCFSLineHdlr
 		funixn[i] = NULL;
 		funix[i]  = -1;
 	}
+
+	CHKiRet(prop.Construct(&pLocalHostIP));
+	CHKiRet(prop.SetString(pLocalHostIP, UCHAR_CONSTANT("127.0.0.1"), sizeof("127.0.0.1") - 1));
+	CHKiRet(prop.ConstructFinalize(pLocalHostIP));
+
+	/* now init listen socket zero, the local log socket */
+	CHKiRet(prop.Construct(&(funixHName[0])));
+	CHKiRet(prop.SetString(funixHName[0], glbl.GetLocalHostName(), ustrlen(glbl.GetLocalHostName())));
+	CHKiRet(prop.ConstructFinalize(funixHName[0]));
 
 	/* register config file handlers */
 	CHKiRet(omsdRegCFSLineHdlr((uchar *)"omitlocallogging", 0, eCmdHdlrBinary,
