@@ -3,6 +3,8 @@ Version 5.3.1  [DEVEL] (rgerhards), 2009-10-05
 - added $AbortOnUncleanConfig directive - permits to prevent startup when
   there are problems with the configuration file. See it's doc for
   details.
+- some cleanup/slight improvement:
+  * changed imuxsock to no longer use deprecated submitAndParseMsg() IF
 - included some important fixes from v4-stable:
   * bugfix: invalid handling of zero-sized messages
   * bugfix: zero-sized UDP messages are no longer processed
